Fix bug - long tweets without spaces were overflowing

--- a/public/styles/tweet-history.css
+++ b/public/styles/tweet-history.css
@@ -60,6 +60,7 @@
   padding-top: 20px;
   padding-bottom: 4px;
   margin-bottom: 10px;
+  hyphens: auto;
 }
 
 /* Tablet Styles */
